Moved with() under new namespace. Added checks to ensure an object is passed and contains a __enter and __exit method. Many thanks for @igorw for helping write the unit tests!

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
     "require": {
         "php": ">=5.4.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "autoload": {
-        "psr-0": { "TylerKing\\With": "src" },
-        "files": ["src/TylerKing/With/With.php"]
-    }
+        "files": ["src/TylerKing/With.php"]
+    },
+    "config": { "bin-dir": "bin" }
 }
