--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tyler-king/with",
+    "name": "ohmybrew/with",
     "type": "library",
     "description": "A Python with-statement clone for PHP.",
     "keywords": ["with"],
@@ -7,17 +7,18 @@
     "authors": [
         {
             "name": "Tyler King",
-            "email": "tyler.king@newfie.co"
+            "email": "tyler.n.king@gmail.com"
         }
     ],
     "require": {
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "satooshi/php-coveralls": "~1.0"
     },
     "autoload": {
-        "files": ["src/TylerKing/With.php"]
+        "files": ["src/OhMyBrew/With.php"]
     },
     "config": { "bin-dir": "bin" }
 }
