--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,26 @@
     "name": "ohmybrew/with",
     "type": "library",
     "description": "A Python with-statement clone for PHP.",
-    "keywords": ["with"],
+    "keywords": ["with", "python"],
     "license": "MIT",
     "authors": [
         {
             "name": "Tyler King",
-            "email": "tyler.n.king@gmail.com"
+            "email": "tyler.n.king@outlook.com"
         }
     ],
     "require": {
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "satooshi/php-coveralls": "~1.0"
+        "phpunit/phpunit": "~6.0||~7.0",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
-        "files": ["src/OhMyBrew/With.php"]
+        "files": [
+            "src/OhMyBrew/With.php",
+            "src/OhMyBrew/Withable.php"
+        ]
     },
     "config": { "bin-dir": "bin" }
 }
