--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Tyler King",
-            "email": "tyler.n.king@outlook.com"
+            "email": "tyler@osiset.com"
         }
     ],
     "require": {
