--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,17 @@
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0||~7.0",
-        "squizlabs/php_codesniffer": "^3.0"
+        "phpunit/phpunit": "9.*",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "autoload": {
         "files": [
             "src/Gnikyt/With.php",
             "src/Gnikyt/Withable.php"
         ]
+    },
+    "scripts": {
+        "test": "bin/phpunit"
     },
     "config": { "bin-dir": "bin" }
 }
